Replace APT with package

--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -3,8 +3,8 @@
   become: true
   tasks:
     - name: Install required system packages
-      apt:
-        pkg:
+      package:
+        name:
           - default-jre
         state: latest
         update_cache: true
