--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = inventory/docker.cfg
+inventory = inventory/vagrant.ini
 host_key_checking = False
 stdout_callback = yaml
 callback_enabled = timer
